<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_master_name"
                style="@style/et_comm_style"
                android:hint="@string/input_personname"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/identity"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_identity"
                style="@style/et_comm_style"
                android:hint="@string/input_identity"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_phonenumber"
                style="@style/et_comm_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_phone"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_email"
                style="@style/et_comm_style"
                android:hint="@string/input_email" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_password"
                style="@style/et_comm_style"
                android:hint="@string/input_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_shop_id"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopid"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_shop_id"
                style="@style/et_comm_style"
                android:hint="@string/input_id"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_findback"
            style="@style/ok_button_style"
            android:layout_marginTop="20dp"
            android:text="@string/findback" >
        </Button>
    </LinearLayout>
</ScrollView>