<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/ll_orgdetail_style"
        android:orientation="horizontal" >

        <TextView
            style="@style/shoptext_left_style"
            android:text="@string/org_about" />

        <EditText
            android:id="@+id/tv_org_about"
            style="@style/et_comm_style"
            android:text="123456789000" />
    </LinearLayout>

    <LinearLayout
        style="@style/ll_orgdetail_style"
        android:orientation="horizontal" >

        <TextView
            style="@style/shoptext_left_style"
            android:text="@string/website" />

        <EditText
            android:id="@+id/tv_website"
            style="@style/et_comm_style"
            android:text="www.baidu.com" />
    </LinearLayout>

    <LinearLayout
        style="@style/ll_orgdetail_style"
        android:orientation="horizontal" >

        <TextView
            style="@style/shoptext_left_style"
            android:text="@string/email_name" />

        <EditText
            android:id="@+id/tv_email"
            style="@style/et_comm_style"
            android:text="633993048@qq.com" />
    </LinearLayout>

    <LinearLayout
        style="@style/ll_orgdetail_style"
        android:orientation="horizontal" >

        <TextView
            style="@style/shoptext_left_style"
            android:text="@string/weibo" />

        <EditText
            android:id="@+id/tv_weibo"
            style="@style/et_comm_style"
            android:text="633993048@qq.com" />
    </LinearLayout>

    <LinearLayout
        style="@style/ll_orgdetail_style"
        android:orientation="horizontal" >

        <TextView
            style="@style/shoptext_left_style"
            android:text="@string/weixinhao" />

        <EditText
            android:id="@+id/tv_weixinhao"
            style="@style/et_comm_style"
            android:text="633993048@qq.com" />
    </LinearLayout>

    <RelativeLayout
        style="@style/ll_orgdetail_style"
        android:visibility="gone" >

        <TextView
            style="@style/shoptext_left_style"
            android:text="@string/weixin_code" >
        </TextView>

        <ImageView
            android:id="@+id/iv_weixin_two_dimension"
            style="@style/wrap"
            android:layout_toLeftOf="@+id/tv_weixin_twodimension_change"
            android:background="@drawable/ic_launcher"
            android:gravity="right" />

        <TextView
            android:id="@+id/tv_weixin_twodimension_change"
            style="@style/et_comm_style"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/iv_weixin_two_dimension"
            android:text="@string/org_change"
            android:textColor="@color/blue" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_orginfo_save"
        style="@style/ok_button_style"
        android:layout_marginTop="@dimen/common_margin_left"
        android:text="@string/save" >
    </Button>

</LinearLayout>