<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/match"
    android:orientation="vertical"
    tools:context=".UserForgetPasswordActivity" >
	<EditText
        android:id="@+id/et_old_password"
        style="@style/match_width"
        android:layout_margin="@dimen/common_margin_left"
        android:gravity="center_vertical"
        android:hint="@string/old_password"
        android:inputType="text"
        android:textSize="@dimen/middleTextSize" />

    <EditText
        android:id="@+id/et_new_password"
        style="@style/match_width"
        android:layout_marginBottom="@dimen/common_margin_left"
        android:layout_marginLeft="@dimen/common_margin_left"
        android:layout_marginRight="@dimen/common_margin_left"
        android:gravity="center_vertical"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textSize="@dimen/middleTextSize" />

    <EditText
        android:id="@+id/et_ensure_password"
        style="@style/match_width"
        android:layout_marginBottom="@dimen/common_margin_left"
        android:layout_marginLeft="@dimen/common_margin_left"
        android:layout_marginRight="@dimen/common_margin_left"
        android:gravity="center_vertical"
        android:hint="@string/ensure_password"
        android:inputType="textPassword"
        android:textSize="@dimen/middleTextSize" />
	<LinearLayout style="@style/match_width"
	    android:orientation="horizontal">
	    <TextView
	        style="@style/wrap"
	        android:layout_marginBottom="@dimen/common_margin_left"
        	android:layout_marginLeft="@dimen/common_margin_left_long"
        	android:textSize="@dimen/middleTextSize"
        	android:textColor="@color/black"
        	android:text="@string/phone_num_2"
        	/>
	    <TextView
	        android:id="@+id/tv_phone"
	        style="@style/wrap"
	        android:textColor="@color/black"
	        android:textSize="@dimen/middleTextSize"
	        android:text="@string/loading"
	        android:layout_marginLeft="@dimen/common_margin_left"
	        />
	</LinearLayout>
    <LinearLayout
        style="@style/match_width"
        android:layout_marginLeft="@dimen/common_margin_left"
        android:layout_marginRight="@dimen/common_margin_left"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_verify_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/input_code"
            android:paddingBottom="@dimen/topOrbottomPadding"
            android:paddingTop="@dimen/topOrbottomPadding"
            android:inputType="phone" />

        <Button
            android:id="@+id/btn_verify_code"
            style="@style/ok_button_style"
            android:layout_width="0dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/get_code"
            android:layout_weight="2"
            android:textSize="@dimen/smallTextSize" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_ok"
        style="@style/ok_button_style"
        android:layout_marginTop="@dimen/margin_between_item"
        android:text="@string/register" />
</LinearLayout>
